modified the card title

--- a/card.html
+++ b/card.html
@@ -11,7 +11,7 @@
     <div class="card-container">
         <!-- Front Cover -->
         <div class="cover">
-            <h1>It's my dad's birthday 🎉🎉🎉</h1>
+            <h1>It's my dad's birthday 🎉</h1>
             <button onclick="openCard()">Open Card</button>
         </div>
 
